# web-sec

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/harbor-cli/: Cargo.toml  README.md
crates/harbor-cli/src/: main.rs
crates/harbor-core/: Cargo.toml  README.md
crates/harbor-core/src/: analysis_result.rs  analyze.rs  analyze_cookies.rs  analyze_cors.rs  analyze_permissions_policy.rs  analyze_x_content_type_options.rs  analyze_x_frame_options.rs  har_scanner.rs  lib.rs  scoring.rs
crates/web-sec-cli/: Cargo.toml
crates/web-sec-cli/src/: main.rs
crates/web-sec-core/: Cargo.toml
crates/web-sec-core/src/: analysis_result.rs  analyze_csp.rs  analyze_hsts.rs  analyze_referrer_policy.rs  har_scanner.rs  lib.rs  severity.rs
