[workspace]
members = ["crates/harbor-core", "crates/harbor-cli"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.92"
homepage = "https://github.com/stefanalfbo/harbor"
repository = "https://github.com/stefanalfbo/harbor"
authors = ["Stefan Alfbo <stefan.alfbo@gmail.com>"]
license = "MIT"
