[package]
name = "harbor-cli"
version = "0.1.1"
description = "The Harbor CLI, which is a web security tool."
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = "README.md"
keywords = ["web", "security", "cli", "tool"]
categories = ["command-line-utilities", "security"]

[[bin]]
name = "harbor"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
harbor-core = { version = "0.1.0", path = "../harbor-core" }
